tests/NormalTests/paczka1/small_fuzzy/17444383.err
Error in line 4: HanIuZ A704 93,9
Error in line 3: A19 A967 7,3
Error in line 12: HanIuZ A704 54,67
